This is the changelog for FASTX::Reader. Version prior to v 0.1 are preliminary (alpha) release, not to be used in production.
Some APIs *can change* with the release of the first stable release (v 0.1).

0.50	2019-06-13
	* Added a control in new() that will stop parsing the file if it's binary (and not .gz)

0.40	2019-06-13
	* 'fqc': added '--verbose' feature, renamed tabular output switch to '-x/--screen' for consistency with Proch::N50
	* 'fqc': improved  handling of non existing files, improved documentation

0.32	2019-06-12
	* Ships a script to count FASTA/FASTQ sequences called 'fqc' (see)
	* Reader object new property 'compressed' (1 if reading .gz files, 0 otherwise)
	* POD documentation Updated

0.31	2019-06-12
	* POD documentation Updated

0.30	2019-06-11
	* Improved getFastqRead() error handling
	* Improved unit tests, in particular for getFastqRead() method
	* Added 'bad.fastq': malformed FASTQ file
	* Shipping FastqReader.pl demo script to see how getFastqRead() works
	* NOTE: This release focuses on getFastqRead(FASTQ), that is 12% faster than the generic getRead(FASTX)

0.20	2019-06-10
	* Added preliminary support to read .gz files

0.11	2019-06-03
	* Cleanup via dist.ini

0.10	2019-06-03
	* FIXED Comments parser was not working for FASTA files
	* Added unit tests for comments
	* Moved release tests to xt/release
	* Added 'Counter.pl' sample script, counting sequences in FASTA/FASTQ files

0.09	2019-05-16
	* Removed test/ directory

0.08	2019-05-16
	* Dist::Zilla configuration updated
	* Renamed experimental files

0.07	2019-05-15
	* GitHub repository restructured to allow TravisCI tests

0.06	2019-05-15
	* BUG FIX author test moved to xt

0.05	2019-05-09
	* Improved test coverage
	* BUG FIX on getFileFormat()

0.02	2019-05-07
	* Reader parses STDIN
	* Updated documentation

0.01	2019-05-05
	* Initial release of a working parser