@@ -22,21 +22,23 @@ my $counter = 0;
 my $opt_invalid = 'n/a';
 my $opt_separator ="\t";
 my $opt_sortby = 'order';
-my ($opt_abs, $opt_basename, $opt_thousand, $opt_csv, $opt_json, $opt_rev, $opt_screen, $opt_tsv, $opt_help, $opt_pretty_json, $opt_verbose);
+my ($opt_abs, $opt_basename, $opt_thousand, $opt_fastx, $opt_csv, $opt_json, $opt_rev, $opt_screen, $opt_tsv, $opt_help, $opt_pretty_json, $opt_verbose);
 my $sort_direction = 'desc';
 my $_opt = GetOptions(
   'a|abspath'    => \$opt_abs,
   'b|basename'   => \$opt_basename,
   'c|csv'        => \$opt_csv,
   'd|thousandsep'=> \$opt_thousand,
-  's|sortby=s'   => \$opt_sortby,
+  'f|fastx'      => \$opt_fastx,
+  'h|help'       => \$opt_help,
   'j|json'       => \$opt_json,
   'p|pretty'     => \$opt_pretty_json,
   'r|reverse'    => \$opt_rev,
-  'x|screen'     => \$opt_screen,
+  's|sortby=s'   => \$opt_sortby,
   't|tsv'        => \$opt_tsv,
   'v|verbose'    => \$opt_verbose,
-  'h|help'       => \$opt_help,
+  'x|screen'     => \$opt_screen,
+
 );
 
 
@@ -69,7 +71,7 @@ foreach my $input_file (@ARGV) {
   }
   my  $seq_reader = FASTX::Reader->new({filename => "$input_file"});
 
-  if ($input_file=~/(\.fastq|\.fq)/) {
+  if ($input_file=~/(\.fastq|\.fq)/ and not defined $opt_fastx) {
     # parse FASTQ
     while (my $seq = $seq_reader->getFastqRead()) {
       next;
@@ -79,7 +81,7 @@ foreach my $input_file (@ARGV) {
     if ($seq_reader->{status} == 0) {
       $output{$abs_path}{count} = "$opt_invalid";
       $output{$abs_path}{print_count} = "$opt_invalid";
-    }
+    }  
   } else {
     # generic FASTX parser
     while (my $seq = $seq_reader->getRead()) {
@@ -88,7 +90,7 @@ foreach my $input_file (@ARGV) {
     $output{$abs_path}{parser} = 'FASTX';
     $output{$abs_path}{count} = $seq_reader->{counter};
   }
-  $output{$abs_path}{count} = 0 unless (defined $output{$abs_path}{count});
+  $output{$abs_path}{count} = $opt_invalid unless (defined $output{$abs_path}{count});
   $output{$abs_path}{compressed}  = $seq_reader->{compressed};
   $output{$abs_path}{print_count} = $output{$abs_path}{count};
   $output{$abs_path}{print_count} =~ s/(\d{1,3}?)(?=(\d{3})+$)/$1,/g if ($opt_thousand);
@@ -164,14 +166,14 @@ END
   $count_options++ if (defined $opt_pretty_json);
 
   die "FATAL ERROR:\n",
-  "Just select one (or none) output format: either --csv, --tsv, --screen  or --json (none for default)\n" if ($count_options>1);
+  "Just select one (or none) output format: either --csv, --tsv, --screen  or --json (none for default).\n" if ($count_options>1);
   if ($opt_screen) {
     eval {
       require Text::ASCIITable;
       Text::ASCIITable->import();
     };
     if ($@) {
-      print STDERR " WARNING: Text::ASCIITable not found, rolling back to default output\n";
+      print STDERR " WARNING: Text::ASCIITable not found, rolling back to default output.\n";
       $opt_screen = undef;
     }
   }
@@ -183,8 +185,8 @@ END
   our %sorters = (
      num_asc         => sub { $output{$b}{$opt_sortby} <=> $output{$a}{$opt_sortby} },
      num_desc        => sub { $output{$a}{$opt_sortby} <=> $output{$b}{$opt_sortby} },
-     string_asc      => sub { $a cmp $b },
-     string_desc     => sub { $b cmp $a },
+     string_desc     => sub { $a cmp $b },
+     string_asc      => sub { $b cmp $a },
   );
 
   my %valid_sort = (
@@ -203,9 +205,10 @@ END
     $sort_function = $sorters{$sort_function_name};
   }
 }
+
 __END__
 
-
+=pod 
 
 =head1 DESCRIPTION
 
@@ -220,14 +223,11 @@ changed with options.
 
   fqc [options] [FILE1 FILE2 FILE3...]
 
-
-
 =head1 PARAMETERS
-
 
 =head2 FILE NAME
 
-=over 12
+=over 4
 
 =item I<-a, --abspath>
 
@@ -249,7 +249,7 @@ Print reads number with a "," used as thousand separator
 Default output format is the filename and reads counts, tab separated. Options formatting
 either filename (C<-a>, C<-b>) and reads counts (C<-d>) will still work.
 
-=over 12
+=over 4
 
 =item I<-t, --tsv> and I<-c, --csv>
 
@@ -281,7 +281,7 @@ Print an ASCII-art table like:
 
 =head2 SORTING
 
-=over 12
+=over 4
 
 =item I<-s, --sortby>
 
@@ -298,7 +298,11 @@ Reverse the sorting order.
 
 =head2 OTHER
 
-=over 12
+=over 4
+
+=item I<-f, --fastx>
+
+Force FASTX reader also for files ending by .fastq or .fq (by default would use getFastqRead() )
 
 =item I<-v, --verbose>
 
